<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ibm.zurich.idmx</groupId>
  <artifactId>pom</artifactId>
  <packaging>pom</packaging>
  <name>Identity Mixer</name>
  <version>3.1.3</version>
  <url>http://www.zurich.ibm.com/security/idemix/</url>

  <properties>
    <abc4TrustVersion>1.1.36</abc4TrustVersion>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <skipTests>true</skipTests>
  </properties>

  <licenses>
    <license>
      <name>Dual License: International License Agreement for Identity Mixer Version 1.2 or Apache License Version 2.0</name>
      <url>LICENSE.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <modules>
    <module>com.ibm.zurich.idmx.interfaces</module>
    <module>com.ibm.zurich.idmx.3_x_x</module>
  </modules>


  <distributionManagement>
    <repository>
      <id>internal</id>
      <url>https://repo.exonym.io/repository/internal/</url>
    </repository>
  </distributionManagement>

  <repositories>
    <repository>
      <id>internal</id>
      <name>Archiva Managed Internal Repository</name>
      <url>https://repo.exonym.io/repository/internal/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>internal</id>
      <name>Archiva Managed Internal Repository</name>
      <url>https://repo.exonym.io/repository/internal/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>



  <dependencyManagement>
    <dependencies>

      <!-- This project modules -->
      <dependency>
        <groupId>com.ibm.zurich.idmx</groupId>
        <artifactId>com.ibm.zurich.idmx.interfaces</artifactId>
        <version>3.1.0</version>

      </dependency>
      <dependency>
        <groupId>com.ibm.zurich.idmx</groupId>
        <artifactId>com.ibm.zurich.idmx.3_x_x</artifactId>
        <version>3.1.0</version>
      </dependency>


      <!-- ABC4Trust dependencies -->

      <dependency>
        <groupId>eu.abc4trust.ri</groupId>
        <artifactId>abc4trust-xml</artifactId>
        <version>${abc4TrustVersion}</version>
      </dependency>
      <dependency>
        <groupId>eu.abc4trust.ri</groupId>
        <artifactId>abce-interfaces</artifactId>
        <version>${abc4TrustVersion}</version>
      </dependency>

      <!-- Referenced libraries -->

      <dependency>
        <groupId>com.google.dagger</groupId>
        <artifactId>dagger</artifactId>
        <version>2.44.2</version>
      </dependency>

      <dependency>
        <groupId>javax.xml.bind</groupId>
        <artifactId>jaxb-api</artifactId>
        <version>2.3.1</version>
        <exclusions>
          <exclusion>
            <groupId>javax.activation</groupId>
            <artifactId>activation</artifactId>
          </exclusion>
        </exclusions>
      </dependency>



<!--      <dependency>-->
<!--        <groupId>xml-security</groupId>-->
<!--        <artifactId>xmlsec</artifactId>-->
<!--        <version>1.3.0</version>-->
<!--      </dependency>-->


      <!--      <dependency>-->
<!--        <groupId>xml-security</groupId>-->
<!--        <artifactId>xmlsec</artifactId>-->
<!--        <version>1.3.0</version>-->
<!--      </dependency>-->


      <!-- We need this dependency for the namespace prefix mapper -->
      <dependency>
        <groupId>com.sun.xml.ws</groupId>
        <artifactId>webservices-rt</artifactId>
        <version>2.0.1</version>
        <exclusions>
          <exclusion>
            <groupId>javax.activation</groupId>
            <artifactId>activation</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- Testing framework -->
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.10</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>com.google.dagger</groupId>
        <artifactId>dagger-compiler</artifactId>
        <version>2.44.2</version>
<!--        <optional>true</optional>-->
      </dependency>

      <dependency>
        <groupId>org.easymock</groupId>
        <artifactId>easymock</artifactId>
        <version>3.0</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.7</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <dependencies>
            <dependency>
              <groupId>com.google.dagger</groupId>
              <artifactId>dagger-compiler</artifactId>
              <version>2.44.2</version>
              <!--            <optional>true</optional>-->
            </dependency>
          </dependencies>

          <version>3.8.0</version>
          <configuration>
            <compilerArgs>
              <!--              <arg>-Xlint:all</arg>-->
            </compilerArgs>
            <encoding>UTF-8</encoding>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
            <release>${maven.compiler.source}</release>

          </configuration>
        </plugin>




        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-eclipse-plugin</artifactId>
          <version>2.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.12.3</version>
          <configuration>
            <!-- This is needed to work around the Serialization issues -->
            <!-- To be removed after migration to JSON-LD              -->
            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
            <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>

            <argLine>-DskipTests</argLine>
            <argLine>-Djava.util.logging.config.file=java.logging.test</argLine>
            <includes>
              <include>**/_AllTests.java</include>
            </includes>


          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.2</version>
          <executions>
            <execution>
              <goals>
                <goal>test-jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>


      </plugins>
    </pluginManagement>
  </build>
</project>
